--- a/sf_oopapp/src/index.html
+++ b/sf_oopapp/src/index.html
@@ -24,12 +24,17 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                 </ul>
+                <span id="app-greeting">
+                </span>
                 <form id="app-login-form" class="d-flex">
                     <input class="form-control me-2" name="login" autocomplete="username" type="text"
                         placeholder="Login" aria-label="Login">
                     <input class="form-control me-2" name="password" autocomplete="current-password" type="password"
                         placeholder="Password" aria-label="Password">
-                    <button id="app-login-btn" class="btn btn-outline-info" type="submit">Sign In</button>
+                    
+                    <span id="app-login">
+                        <button id="app-login-btn" class="btn btn-outline-info" type="submit">Sign In</button>
+                    </span>
                 </form>
             </div>
         </div>
